2025-02-07 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  support/regression/tests/bug-3830.c:
	  Fix bug #3830.

2025-02-05 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3831.c:
	  Regression test for bug #3831.
	* support/scripts/sdcclogo.png:
	  Pixel graphics version of new logo created by Benedikt Freisen, as used for SourceForge project.

2025-02-04 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c:
	  Fix bug #3831.

2025-02-01 Benedikt Freisen <b.freisen AT gmx.net>

	* src/SDCC.y,
	  support/regression/tests/bug-3822.c:
	  Fix bug #3822.

2025-01-31 Philipp Klaus Krause <philipp@colecovision.eu>

	* doc/sdccman.lyx:
	  Improve Rabbit port documentation.

2025-01-28 Philipp Klaus Krause <philipp@colecovision.eu>

	* doc/sdccman.lyx:
	  Fix a typo in the manual (abbr. of Rabbit 2000 revision A).

2025-01-28 Philipp Klaus Krause <philipp@colecovision.eu>

	* Merge next branch to trunk.

2025-01-28 Philipp Klaus Krause <philipp@colecovision.eu>

	* .version:
	  Start of post-4.5.0 development.

2025-01-22 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/peeph.def,
	  support/regression/tests/bug-3824.c:
	  Fix bug #3824.

2025-01-21 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/scripts/sdcc.nsi:
	  Fix bug #3820 via patch by Janko Stamenović.
	* src/z80/gen.c:
	  Fix bug #3821.

2025-01-19 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx:
	  Clarify linking order resulting from mixed command lines.

2025-01-19 Philipp Klaus Krause <philipp@colecovision.eu>

	* doc/sdccman.lyx:
	  Improve Rabbit port documentation.

2025-01-19 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx,
	  src/SDCC.y,
	  src/SDCCerr.c,
	  src/SDCCerr.h,
	  src/SDCCsymt.c,
	  src/SDCCsymt.h,
	  support/regression/tests/if-decl.c:
	  Implement if-declarations (C2y, n3356, see RFE #979).

2025-01-18 Benedikt Freisen <b.freisen AT gmx.net>

	* support/regression/Makefile.in: